--- a/CSS/main.css
+++ b/CSS/main.css
@@ -4,3 +4,39 @@
 .navbar-brand img {
     height: 2vh;
 }
+.container-fluid {
+    padding: 0;
+}
+.introduction {
+    width: 100%;
+    height: 50%;
+    margin: 0;
+    padding-bottom: 50%;
+    padding-top: 4%;
+    padding-left: 2%;
+}
+/* .heading {
+    margin-top: 2%;
+    font-size: 5%; - This line messes it up
+} */
+.credit {
+    margin-top: 2%;
+    text-align: right;
+}
+.name {
+    font-family: 'Dancing Script', cursive;
+}
+.title {
+    margin-top: 10%;
+    align: auto;
+}
+.bouncing {
+    width: 20%;
+    height: 20%;
+    margin-top: 10%;
+}
+.animation {
+    width: 100%;
+    height: 50%;
+    background: red;
+}
