--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,9 +1,39 @@
 /* NAVBAR */
-.navbar.navbar-default.navbar-fixed-top{
+/* .navbar.navbar-default.navbar-fixed-top{
     opacity: 0.7;
 }
 .navbar-brand img {
     height: 2vh;
+} */
+body {
+    background: url("IMG/wallpaper.jpg")
+}
+.sidenav {
+    height: 100%; 
+    width: 12%; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    /* background-color: #666970; */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 50px;
+    padding-left: 3%;
+}
+
+/* The navigation menu links */
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 15px;
+    color: #bc9f4f;
+    display: block;
+}
+
+/* MEDIA QUERY */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
 }
 /* NAVBAR */
 
@@ -13,39 +43,61 @@
 }
 .introduction { /* SECTION 1 JUMBOTRON STYLING */
     width: 100%;
-    height: 50%;
+    height: 100vh;
     margin: 0;
-    padding-bottom: 50%;
     padding-top: 4%;
     padding-left: 2%;
+    margin-left: 12%;
+    /* background: #666970; */
+    color: #bc9f4f;
 }
 /* .heading { THIS WAS REMOVED AS IT WAS REDUNDANT
     margin-top: 2%;
     font-size: 5%; - This line messes it up
 } */
-.credit { /* MADE BY TINASHE OSEWE STYLING */
+.title { /* "PIG DICE" STYLING */
+    margin-top: 10%;
+    align: auto;
+    font-size: 75px;
+}
+.credit { /* "DESIGNED BY TINASHE OSEWE" STYLING */
     margin-top: 2%;
     text-align: right;
+    font-size: 20px;
 }
 .name { /* TINASHE OSEWE STYLING */
     font-family: 'Dancing Script', cursive;
 }
-.title { /* "PIG DICE" STYLING */
-    margin-top: 10%;
-    align: auto;
-}
-.bouncing { /* BOUNCING DICE ANIMATION */
+/* .bouncing { BOUNCING DICE ANIMATION
     width: 20%;
     height: 20%;
     margin-top: 10%;
-}
+} */
+
 /* SECTION 1 */
 
-/* SECTION 2 */
-.animation {
+/* SECTION 2
+.details {
     width: 100%;
-    height: 50%;
-    background: red;
+    height: 100vh;
+    background: #666970;
+    color: white;
+    border-radius: 0px;
 }
-
-/* SECTION 2 */
+.description {
+    float: left;
+    word-wrap: break-word;
+    width: 50%;
+    font-family: 'EB Garamond', serif;
+}
+.reference {
+    font-size: 2vh;
+    text-decoration: underline;
+    color: white;
+}
+.boar {
+    opacity: 90%;
+    margin-top: -3%;
+    margin-left: 3%;
+}
+SECTION 2 */
